--- a/CourseProject.Rmd
+++ b/CourseProject.Rmd
@@ -62,9 +62,14 @@ model.testing.data  <- train.data.colfilter[-inTrain,]
 Since our task in this problem was that of classification and not prediction Random Forest was chosen to create the model.
 Due to the size of the test data (19622 rows), there is enough data to perform cross-validation.  A 10-fold cross-validation was performed against the data.
 
-```{r, echo=FALSE}
+```{r}
 ## Load modfit object
-load(file="model.rda")
+train.control <- trainControl(method="cv")
+modfit <- train(classe ~ . , 
+                        data=model.training.data,
+                        trControl=train.control,
+                        method="rf"
+                )
 ```
 
 ### Model and Results
